--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,4 +1,9 @@
 /* Home Page */
+
+html {
+  overflow-x: hidden;
+}
+
 .home-page {
   width: 100%;
   min-height: 100vh;
@@ -8,6 +13,7 @@
   justify-content: center;
   padding: 2rem;
 }
+
 
 /* Intro Box */
 .intro-box {
